Fix footer alignment, fontawesome placements

--- a/themes/janwxyz/src/scss/style.scss
+++ b/themes/janwxyz/src/scss/style.scss
@@ -83,9 +83,13 @@ header {
 }
 
 .mastfootvis, .mastfoot {
-    font-size: 0.9em;
+    @media (min-width: 420px) {
+      font-size: 0.9em;
+    }
+
+    font-size: 0.6em;
     color: $primary;
-}
+  }
 
 .mastfoot {
     opacity: 0.50;
@@ -103,7 +107,7 @@ header {
     & .inline-svg {
         height: 1.15rem;
         width: 1.15rem;
-        top: 0.15rem;
+        top: -0.15rem;
     }
 }
 
@@ -152,7 +156,7 @@ h1 a, h2 a, header a {
   display: inline-block;
   height: 1.5rem;
   width: 1.5rem;
-  top: 0.35rem;
+  top: -0.15rem;
   position: relative;
 }
 
